--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -60,9 +60,12 @@ jobs:
           context: .
           file: dockerfiles/builder.base
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ env.IMAGE_NAME }}:base2
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:base2
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+      - name: Tag base
+        run: docker tag "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:base2" "${{ env.IMAGE_NAME }}:base2"
           
       - name: Build and push Docker image
         id: build-and-push
