--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -63,9 +63,13 @@ jobs:
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:base2
           cache-from: type=gha
           cache-to: type=gha,mode=max
-
+      - uses: rishabhgupta/split-by@v1
+        id: split
+        with:
+          string: ${{ steps.builder.outputs.imageid }}
+          split-by: ':'
       - name: Tag base
-        run: docker tag "${{ steps.builder.outputs.imageid }}" "${{ env.IMAGE_NAME }}:base2"
+        run: docker tag "${{ steps.split.outputs._2 }}" "${{ env.IMAGE_NAME }}:base2"
         
       - name: Build and push Docker image
         id: build-and-push
